[package]
authors = ["49nord GmbH <hello@49nord.de>"]
name = "tok"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/49nord/tok-rs"
documentation = "https://docs.rs/tok"

[dependencies]
constant_time_eq = "0.1.3"
rand = "0.4.2"
serde = { version = "1.0.27", optional = true }

[features]
default = ["std"]
std = []
serialize = ["serde"]
deserialize = ["serde"]
